--- a/About_Us.html
+++ b/About_Us.html
@@ -12,6 +12,7 @@
   
   <title>About_Us</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -102,7 +103,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -115,37 +116,31 @@
     <div class="container">
         <div class="row mbr-white">
             <div class="col-12 col-md-6 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Our Services</strong></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
+                    <strong>Our Services</strong></h5>
                 <ul class="list mbr-fonts-style display-4">
-                    <li class="mbr-text item-wrap">Government</li>
-                    <li class="mbr-text item-wrap"><span style="font-size: 1.1rem;">Military Forces</span></li><li class="mbr-text item-wrap"><span style="font-size: 1.1rem;">Police Force<br></span>School / Universities</li><li class="mbr-text item-wrap">Health Care</li>
-                    <li class="mbr-text item-wrap">Judicial / Legal</li>
+                    <li class="mbr-text item-wrap"><a href="Government.html" class="text-primary">Government</a>
+</li><li class="mbr-text item-wrap"><a href="Military_Forces.html" class="text-primary">Military Forces</a>
+</li><li class="mbr-text item-wrap"><a href="Police_Force.html" class="text-primary">Police </a><a href="Police_Force.html" class="text-primary">Force</a>
+</li><li class="mbr-text item-wrap"><a href="School_Universities.html" class="text-primary">School </a>/ <a href="School_Universities.html" class="text-primary">Universities</a>
+</li><li class="mbr-text item-wrap"><a href="Health_Care.html" class="text-primary">Health Care</a>
+</li><li class="mbr-text item-wrap"><a href="Judicial_Legal.html" class="text-primary">Judicial / Legal</a></li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">Learn More</h5>
+                <ul class="list mbr-fonts-style display-4"><p><span style="font-size: 1.1rem;"><br></span></p><p><span style="font-size: 1.1rem;">Github&nbsp;</span><br></p><p>Youtube</p><p>Linkedin</p></ul>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
+                    <a href="Contact.html#contacts3-43" class="text-primary"><strong>Address</strong></a></h5>
+                <ul class="list mbr-fonts-style display-4">
+                    <li class="mbr-text item-wrap">flat B-1 ,Tribhuwan Gopal Enclave, Nalanda Colony, Bailey Rd, Khajpura, Patna, Bihar 800014</li>
                 </ul>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-                    <strong>Themes</strong>
-                </h5>
-                <ul class="list mbr-fonts-style display-4">
-
-                    <li class="mbr-text item-wrap">Mobirise 5</li>
-                    <li class="mbr-text item-wrap">Mobirise AMP</li>
-                    <li class="mbr-text item-wrap">Mobirise Kit</li>
-                </ul>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-                    <strong>Company Address</strong></h5>
-                <ul class="list mbr-fonts-style display-4">
-                    <li class="mbr-text item-wrap">Code Editor</li>
-                    <li class="mbr-text item-wrap">Form Builder</li>
-                    <li class="mbr-text item-wrap">Popup Builder</li>
-                    <li class="mbr-text item-wrap">Enterprise</li>
-                </ul>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-                    <strong>About</strong>
+                    <a href="What_We_Do.html" class="text-primary"><strong>About</strong></a>
                 </h5>
                 <p class="mbr-text mbr-fonts-style mb-4 display-4">
                     VirtualDoxx Corporation develops enterprise-class software integrated with best-of-breed RFID technologies for item tracking and SharePoint templates for content management</p>
@@ -165,7 +160,7 @@
                     </div>
                     <div class="soc-item">
                         <a href="https://twitter.com/mobirise" target="_blank">
-                            <span class="mbr-iconfont socicon socicon-instagram"></span>
+                            <span class="mbr-iconfont mbrib-github"></span>
                         </a>
                     </div>
                     
@@ -174,7 +169,7 @@
             
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/c" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Create a site with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built by Apoorv Pandey - <a href="https://mobirise.site/k" style="color:#aaa;"></a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
